src/object/elf/edelf/src/y.output

state 0
	$accept : _stabstring $end 

	INTEGER  shift 36
	NAME  shift 2
	c  shift 4
	r  shift 21
	C  shift 15
	S  shift 23
	t  shift 10
	T  shift 11
	a  shift 12
	p  shift 13
	v  shift 14
	D  shift 16
	R  shift 17
	d  shift 20
	G  shift 22
	V  shift 24
	Y  shift 25
	Z  shift 26
	L  shift 27
	f  shift 28
	g  shift 29
	m  shift 30
	J  shift 31
	F  shift 32
	I  shift 33
	P  shift 34
	Q  shift 35
	(  shift 37
	.  error

	stabstring  goto 1
	class  goto 3
	namedtype  goto 5
	parameter  goto 6
	procedure  goto 7
	variable  goto 8
	label  goto 9
	typeid  goto 19
	proc  goto 18

state 1
	$accept :  stabstring_$end 

	$end  accept
	.  error


state 2
	stabstring :  NAME_: class 

	:  shift 38
	.  error


state 3
	stabstring :  class_    (2)

	.  reduce 2


state 4
	class :  c_= constant ; 

	=  shift 39
	.  error


state 5
	class :  namedtype_    (4)

	.  reduce 4


state 6
	class :  parameter_    (5)

	.  reduce 5


state 7
	class :  procedure_    (6)

	.  reduce 6


state 8
	class :  variable_    (7)

	.  reduce 7


state 9
	class :  label_    (8)

	.  reduce 8


state 10
	namedtype :  t_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 40

state 11
	namedtype :  T_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 41

state 12
	parameter :  a_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 42

state 13
	parameter :  p_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 43

state 14
	parameter :  v_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 44

state 15
	parameter :  C_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 45

state 16
	parameter :  D_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 46

state 17
	parameter :  R_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 47

state 18
	procedure :  proc_    (30)
	procedure :  proc_, NAME : NAME 

	,  shift 48
	.  reduce 30


state 19
	variable :  typeid_    (32)

	.  reduce 32


state 20
	variable :  d_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 49

state 21
	variable :  r_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 50

state 22
	variable :  G_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 51

state 23
	variable :  S_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 52

state 24
	variable :  V_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 53

state 25
	variable :  Y_    (38)

	.  reduce 38


state 26
	variable :  Z_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 54

state 27
	label :  L_    (40)

	.  reduce 40


state 28
	proc :  f_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 55

state 29
	proc :  g_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 56

state 30
	proc :  m_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 57

state 31
	proc :  J_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 58

state 32
	proc :  F_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 59

state 33
	proc :  I_    (46)

	.  reduce 46


state 34
	proc :  P_    (47)

	.  reduce 47


state 35
	proc :  Q_    (48)

	.  reduce 48


state 36
	typeid :  INTEGER_    (49)
	typeid :  INTEGER_= typedef 
	typeid :  INTEGER_typeattrs typedef 

	=  shift 60
	@  shift 62
	.  reduce 49

	typeattrs  goto 61

state 37
	typeid :  (_INTEGER , INTEGER ) 
	typeid :  (_INTEGER , INTEGER ) = typedef 
	typeid :  (_INTEGER , INTEGER ) typeattrs typedef 

	INTEGER  shift 63
	.  error


state 38
	stabstring :  NAME :_class 

	INTEGER  shift 36
	c  shift 4
	r  shift 21
	C  shift 15
	S  shift 23
	t  shift 10
	T  shift 11
	a  shift 12
	p  shift 13
	v  shift 14
	D  shift 16
	R  shift 17
	d  shift 20
	G  shift 22
	V  shift 24
	Y  shift 25
	Z  shift 26
	L  shift 27
	f  shift 28
	g  shift 29
	m  shift 30
	J  shift 31
	F  shift 32
	I  shift 33
	P  shift 34
	Q  shift 35
	(  shift 37
	.  error

	class  goto 64
	namedtype  goto 5
	parameter  goto 6
	procedure  goto 7
	variable  goto 8
	label  goto 9
	typeid  goto 19
	proc  goto 18

state 39
	class :  c =_constant ; 

	c  shift 67
	b  shift 66
	e  shift 68
	i  shift 69
	r  shift 70
	s  shift 71
	C  shift 72
	S  shift 73
	.  error

	constant  goto 65

state 40
	namedtype :  t typeid_    (22)

	.  reduce 22


state 41
	namedtype :  T typeid_    (23)

	.  reduce 23


state 42
	parameter :  a typeid_    (24)

	.  reduce 24


state 43
	parameter :  p typeid_    (25)

	.  reduce 25


state 44
	parameter :  v typeid_    (26)

	.  reduce 26


state 45
	parameter :  C typeid_    (27)

	.  reduce 27


state 46
	parameter :  D typeid_    (28)

	.  reduce 28


state 47
	parameter :  R typeid_    (29)

	.  reduce 29


state 48
	procedure :  proc ,_NAME : NAME 

	NAME  shift 74
	.  error


state 49
	variable :  d typeid_    (33)

	.  reduce 33


state 50
	variable :  r typeid_    (34)

	.  reduce 34


state 51
	variable :  G typeid_    (35)

	.  reduce 35


state 52
	variable :  S typeid_    (36)

	.  reduce 36


state 53
	variable :  V typeid_    (37)

	.  reduce 37


state 54
	variable :  Z typeid_    (39)

	.  reduce 39


state 55
	proc :  f typeid_    (41)

	.  reduce 41


state 56
	proc :  g typeid_    (42)

	.  reduce 42


state 57
	proc :  m typeid_    (43)

	.  reduce 43


state 58
	proc :  J typeid_    (44)

	.  reduce 44


state 59
	proc :  F typeid_    (45)

	.  reduce 45


state 60
	typeid :  INTEGER =_typedef 

	INTEGER  shift 76
	c  shift 78
	b  shift 77
	e  shift 80
	i  shift 82
	s  shift 115
	C  shift 90
	S  shift 95
	t  shift 110
	a  shift 104
	p  shift 112
	v  shift 117
	D  shift 106
	R  shift 113
	d  shift 79
	G  shift 119
	V  shift 98
	Y  shift 118
	Z  shift 99
	f  shift 111
	g  shift 81
	m  shift 85
	F  shift 114
	I  shift 91
	P  shift 109
	k  shift 83
	l  shift 84
	n  shift 86
	o  shift 87
	w  shift 88
	z  shift 89
	K  shift 92
	M  shift 93
	N  shift 94
	*  shift 96
	&  shift 97
	A  shift 105
	E  shift 107
	O  shift 108
	u  shift 116
	.  error

	typedef  goto 75
	array  goto 100
	subrange  goto 101
	proceduretype  goto 102
	record  goto 103

state 61
	typeid :  INTEGER typeattrs_typedef 

	INTEGER  shift 76
	c  shift 78
	b  shift 77
	e  shift 80
	i  shift 82
	s  shift 115
	C  shift 90
	S  shift 95
	t  shift 110
	a  shift 104
	p  shift 112
	v  shift 117
	D  shift 106
	R  shift 113
	d  shift 79
	G  shift 119
	V  shift 98
	Y  shift 118
	Z  shift 99
	f  shift 111
	g  shift 81
	m  shift 85
	F  shift 114
	I  shift 91
	P  shift 109
	k  shift 83
	l  shift 84
	n  shift 86
	o  shift 87
	w  shift 88
	z  shift 89
	K  shift 92
	M  shift 93
	N  shift 94
	*  shift 96
	&  shift 97
	A  shift 105
	E  shift 107
	O  shift 108
	u  shift 116
	.  error

	typedef  goto 120
	array  goto 100
	subrange  goto 101
	proceduretype  goto 102
	record  goto 103

state 62
	typeattrs :  @_typeattrlist ; 

	error  shift 128
	s  shift 125
	a  shift 124
	p  shift 126
	P  shift 127
	@  shift 122
	.  error

	typeattrlist  goto 121
	typeattr  goto 123

state 63
	typeid :  ( INTEGER_, INTEGER ) 
	typeid :  ( INTEGER_, INTEGER ) = typedef 
	typeid :  ( INTEGER_, INTEGER ) typeattrs typedef 

	,  shift 129
	.  error


state 64
	stabstring :  NAME : class_    (1)

	.  reduce 1


state 65
	class :  c = constant_; 

	;  shift 130
	.  error


state 66
	constant :  b_ordvalue 

	INTEGER  shift 132
	.  error

	ordvalue  goto 131

state 67
	constant :  c_ordvalue 

	INTEGER  shift 132
	.  error

	ordvalue  goto 133

state 68
	constant :  e_typeid , ordvalue 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 134

state 69
	constant :  i_INTEGER 

	INTEGER  shift 135
	.  error


state 70
	constant :  r_REAL 

	REAL  shift 136
	.  error


state 71
	constant :  s_STRING 

	STRING  shift 137
	.  error


state 72
	constant :  C_REAL , REAL 

	REAL  shift 138
	.  error


state 73
	constant :  S_typeid , numelements , numbits , bitpattern 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 139

state 74
	procedure :  proc , NAME_: NAME 

	:  shift 140
	.  error


state 75
	typeid :  INTEGER = typedef_    (50)

	.  reduce 50


state 76
	typedef :  INTEGER_    (63)

	.  reduce 63


state 77
	typedef :  b_typeid ; # numbytes 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 141

state 78
	typedef :  c_typeid ; # numbits 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 142

state 79
	typedef :  d_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 143

state 80
	typedef :  e_enumspec ; 

	INTEGER  shift 36
	NAME  shift 148
	(  shift 37
	.  error

	typeid  goto 146
	enumspec  goto 144
	enumlist  goto 145
	enum  goto 147

state 81
	typedef :  g_typeid ; # numbits 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 149

state 82
	typedef :  i_NAME : NAME ; 
	typedef :  i_NAME : NAME , typeid ; 

	NAME  shift 150
	.  error


state 83
	typedef :  k_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 151

state 84
	typedef :  l_; # 

	;  shift 152
	.  error


state 85
	typedef :  m_optvbasespec optmultibasespec typeid : typeid : typeid ; 
	optvbasespec : _    (136)

	v  shift 154
	.  reduce 136

	optvbasespec  goto 153

state 86
	typedef :  n_typeid ; # numbytes 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 155

state 87
	typedef :  o_NAME ; 
	typedef :  o_NAME , typeid 

	NAME  shift 156
	.  error


state 88
	typedef :  w_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 157

state 89
	typedef :  z_typeid ; # numbytes 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 158

state 90
	typedef :  C_usage 

	c  shift 164
	b  shift 163
	e  shift 166
	i  shift 170
	r  shift 179
	s  shift 180
	t  shift 181
	a  shift 162
	p  shift 177
	d  shift 165
	f  shift 167
	g  shift 168
	m  shift 174
	k  shift 172
	l  shift 173
	n  shift 175
	o  shift 176
	h  shift 169
	j  shift 171
	q  shift 178
	.  error

	usage  goto 159
	redefinition  goto 161
	picstoragetype  goto 160

state 91
	typedef :  I_numbytes ; # picsize 

	INTEGER  shift 183
	.  error

	numbytes  goto 182

state 92
	typedef :  K_cobolfiledesc ; 

	i  shift 186
	r  shift 188
	s  shift 189
	l  shift 187
	.  error

	cobolfiledesc  goto 184
	organization  goto 185

state 93
	typedef :  M_typeid ; # bound 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 190

state 94
	typedef :  N_    (83)

	.  reduce 83


state 95
	typedef :  S_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 191

state 96
	typedef :  *_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 192

state 97
	typedef :  &_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 193

state 98
	typedef :  V_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 194

state 99
	typedef :  Z_    (88)

	.  reduce 88


state 100
	typedef :  array_    (89)

	.  reduce 89


state 101
	typedef :  subrange_    (90)

	.  reduce 90


state 102
	typedef :  proceduretype_    (91)

	.  reduce 91


state 103
	typedef :  record_    (92)

	.  reduce 92


state 104
	array :  a_typeid ; # typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 195

state 105
	array :  A_typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 196

state 106
	array :  D_INTEGER , typeid 

	INTEGER  shift 197
	.  error


state 107
	array :  E_INTEGER , typeid 

	INTEGER  shift 198
	.  error


state 108
	array :  O_INTEGER , typeid 

	INTEGER  shift 199
	.  error


state 109
	array :  P_typeid ; # typeid 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 200

state 110
	subrange :  t_typeid ; # bound ; # bound 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 201

state 111
	proceduretype :  f_typeid ; 
	proceduretype :  f_typeid , numparams ; tparamlist ; 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 202

state 112
	proceduretype :  p_numparams ; tparamlist ; 

	INTEGER  shift 204
	.  error

	numparams  goto 203

state 113
	proceduretype :  R_numparams ; namedtparamlist 

	INTEGER  shift 204
	.  error

	numparams  goto 205

state 114
	proceduretype :  F_typeid , numparams ; namedtparamlist ; 

	INTEGER  shift 36
	(  shift 37
	.  error

	typeid  goto 206

state 115
	record :  s_numbytes # fieldlist ; 

	INTEGER  shift 183
	.  error

	numbytes  goto 207

state 116
	record :  u_numbytes # fieldlist ; 

	INTEGER  shift 183
	.  error

	numbytes  goto 208

state 117
	record :  v_numbytes # fieldlist variantpart ; 

	INTEGER  shift 183
	.  error

	numbytes  goto 209

state 118
	record :  Y_numbytes classkey optpbv optbasespeclist ( extendedfieldlist optnameresolutionlist ; 

	INTEGER  shift 183
	.  error

	numbytes  goto 210

state 119
	record :  G_redefinition , n numbits # fieldlist ; 
	record :  G_n numbits fieldlist ; 
	record :  G_redefinition , c numbits # condfieldlist ; 
	record :  G_c numbits condfieldlist ; 

	c  shift 213
	r  shift 214
	n  shift 212
	.  error

	redefinition  goto 211

state 120
	typeid :  INTEGER typeattrs typedef_    (51)

	.  reduce 51


state 121
	typeattrs :  @ typeattrlist_; 

	;  shift 215
	.  error


state 122
	typeattrlist :  @_typeattr 

	error  shift 128
	s  shift 125
	a  shift 124
	p  shift 126
	P  shift 127
	.  error

	typeattr  goto 216

state 123
	typeattrlist :  typeattr_    (57)

	.  reduce 57


state 124
	typeattr :  a_INTEGER 

	INTEGER  shift 217
	.  error


state 125
	typeattr :  s_INTEGER 

	INTEGER  shift 218
	.  error


state 126
	typeattr :  p_INTEGER 

	INTEGER  shift 219
	.  error


state 127
	typeattr :  P_    (61)

	.  reduce 61


state 128
	typeattr :  error_    (62)

	.  reduce 62


state 129
	typeid :  ( INTEGER ,_INTEGER ) 
	typeid :  ( INTEGER ,_INTEGER ) = typedef 
	typeid :  ( INTEGER ,_INTEGER ) typeattrs typedef 

	INTEGER  shift 220
	.  error


state 130
	class :  c = constant ;_    (3)

	.  reduce 3


state 131
	constant :  b ordvalue_    (9)

	.  reduce 9


state 132
	ordvalue :  INTEGER_    (17)

	.  reduce 17


state 133
	constant :  c ordvalue_    (10)

	.  reduce 10


state 134
	constant :  e typeid_, ordvalue 

	,  shift 221
	.  error


state 135
	constant :  i INTEGER_    (12)

	.  reduce 12


state 136
	constant :  r REAL_    (13)

	.  reduce 13


state 137
	constant :  s STRING_    (14)

	.  reduce 14


state 138
	constant :  C REAL_, REAL 

	,  shift 222
	.  error


state 139
	constant :  S typeid_, numelements , numbits , bitpattern 

	,  shift 223
	.  error


state 140
	procedure :  proc , NAME :_NAME 

	NAME  shift 224
	.  error


state 141
	typedef :  b typeid_; # numbytes 

	;  shift 225
	.  error


state 142
	typedef :  c typeid_; # numbits 

	;  shift 226
	.  error


state 143
	typedef :  d typeid_    (66)

	.  reduce 66


state 144
	typedef :  e enumspec_; 

	;  shift 227
	.  error


state 145
	enumspec :  enumlist_    (93)
	enumlist :  enumlist_enum 

	NAME  shift 148
	.  reduce 93

	enum  goto 228

state 146
	enumspec :  typeid_: enumlist 

	:  shift 229
	.  error


state 147
	enumlist :  enum_    (95)

	.  reduce 95


state 148
	enum :  NAME_: ordvalue , # 

	:  shift 230
	.  error


state 149
	typedef :  g typeid_; # numbits 

	;  shift 231
	.  error


state 150
	typedef :  i NAME_: NAME ; 
	typedef :  i NAME_: NAME , typeid ; 

	:  shift 232
	.  error


state 151
	typedef :  k typeid_    (71)

	.  reduce 71


state 152
	typedef :  l ;_# 

	#  shift 233
	.  error


state 153
	typedef :  m optvbasespec_optmultibasespec typeid : typeid : typeid ; 
	optmultibasespec : _    (138)

	m  shift 235
	.  reduce 138

	optmultibasespec  goto 234

state 154
	optvbasespec :  v_    (137)

	.  reduce 137


state 155
	typedef :  n typeid_; # numbytes 

	;  shift 236
	.  error


state 156
	typedef :  o NAME_; 
	typedef :  o NAME_, typeid 

	;  shift 237
	,  shift 238
	.  error


state 157
	typedef :  w typeid_    (77)

	.  reduce 77


state 158
	typedef :  z typeid_; # numbytes 

	;  shift 239
	.  error


state 159
	typedef :  C usage_    (79)

	.  reduce 79


state 160
	usage :  picstoragetype_numbits , editdescription , picsize ; 
	usage :  picstoragetype_numbits , editdescription , picsize , # condition ; 

	INTEGER  shift 241
	.  error

	numbits  goto 240

state 161
	usage :  redefinition_picstoragetype numbits , editdescription , picsize ; 
	usage :  redefinition_picstoragetype numbits , editdescription , picsize , # condition ; 

	c  shift 164
	b  shift 163
	e  shift 166
	i  shift 170
	r  shift 243
	s  shift 180
	t  shift 181
	a  shift 162
	p  shift 177
	d  shift 165
	f  shift 167
	g  shift 168
	m  shift 174
	k  shift 172
	l  shift 173
	n  shift 175
	o  shift 176
	h  shift 169
	j  shift 171
	q  shift 178
	.  error

	picstoragetype  goto 242

state 162
	picstoragetype :  a_    (232)

	.  reduce 232


state 163
	picstoragetype :  b_    (233)

	.  reduce 233


state 164
	picstoragetype :  c_    (234)

	.  reduce 234


state 165
	picstoragetype :  d_    (235)

	.  reduce 235


state 166
	picstoragetype :  e_    (236)

	.  reduce 236


state 167
	picstoragetype :  f_    (237)

	.  reduce 237


state 168
	picstoragetype :  g_    (238)

	.  reduce 238


state 169
	picstoragetype :  h_    (239)

	.  reduce 239


state 170
	picstoragetype :  i_    (240)

	.  reduce 240


state 171
	picstoragetype :  j_    (241)

	.  reduce 241


state 172
	picstoragetype :  k_    (242)

	.  reduce 242


state 173
	picstoragetype :  l_    (243)

	.  reduce 243


state 174
	picstoragetype :  m_    (244)

	.  reduce 244


state 175
	picstoragetype :  n_    (245)

	.  reduce 245


state 176
	picstoragetype :  o_    (246)

	.  reduce 246

